project03 임시 저장 2022-03-28

--- a/Mission-03/stylesheets/pages/category.css
+++ b/Mission-03/stylesheets/pages/category.css
@@ -1,1 +1,226 @@
 /* 카테고리별 추천 광고상품 */
+
+body {
+  width: 1020px;
+  margin: 0 auto;
+}
+
+h1 {
+  margin-top: 100px;
+  margin-bottom: 48px;
+}
+
+.category-best-headline .first-line {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.4px;
+}
+
+.category-best-headline .second-line {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 27.6px;
+}
+
+.category-best-headline .second-line strong {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 27.6px;
+  color: var(--color-blue-600);
+}
+
+.category-best-house {
+  display: flex;
+  height: 634px;
+  margin-top: 24px;
+  border-top: 1px solid var(--color-brown-300);
+  border-bottom: 1px solid var(--color-brown-300);
+}
+
+.category-best-house .category-title-container {
+  margin-top: 48px;
+  margin-left: 24px;
+  width: 174px;
+}
+
+.category-best-house .category-title-container .category-title {
+  color: var(--color-brown-300);
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 27.6px;
+  margin: 0px;
+}
+
+.shortcut {
+  margin-top: 8px;
+  font-size: 14px;
+  line-height: 16.8px;
+  font-weight: 700;
+  height: 17px;
+  color: var(--color-gray-700);
+  background-image: url("../../assets/icon/angle-right-default.svg");
+  background-repeat: no-repeat;
+  background-position-x: 56px;
+  background-position-y: 4px;
+}
+
+.hot-keyword {
+  margin-top: 248px;
+  height: 21px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 20.7px;
+  text-shadow: rgba(0, 0, 0, 0.2);
+  color: var(--color-back);
+}
+
+.category-best-house .hash-tag-container {
+  margin-top: 12px;
+  width: 124px;
+}
+
+.category-best-house .hash-tag-box {
+  display: inline-block;
+  margin-bottom: 12px;
+  border: 1px solid var(--color-gray-400);
+  height: 26px;
+}
+
+.category-best-house .hash-tag-box:first-child {
+  margin-top: 8px;
+}
+
+.category-best-house .hash-tag {
+  color: var(--color-brown-300);
+  font-size: 12px;
+  font-weight: 400;
+  margin: 6px 10px;
+}
+
+.category-best-house .slide-banner {
+  position: relative;
+  width: 320px;
+  height: 631px;
+  margin: 1px 0 2px 0;
+}
+
+.category-best-house .slide-banner img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+}
+.category-best-house .slide-banner-text-box {
+  position: relative;
+  width: 260px;
+  height: 90px;
+  background-color: var(--color-brown-300);
+  margin: 483px 30px 0 30px;
+}
+
+.slide-banner-text-box .text-line1 {
+  position: absolute;
+  height: 24px;
+  width: 205px;
+  color: var(--color-white);
+  top: 19px;
+  left: 28px;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.slide-banner-text-box .text-line2 {
+  position: absolute;
+  height: 19px;
+  width: 215px;
+  top: 51px;
+  left: 23px;
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--color-white);
+  text-align: center;
+}
+
+.slide-banner .indicate-group {
+  display: flex;
+  justify-content: space-between;
+  width: 32px;
+  height: 12px;
+  position: absolute;
+  top: 597px;
+  left: 144px;
+}
+
+.slide-banner .indicate-group .indicate {
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background-color: var(--color-gray-600);
+}
+
+.slide-banner .indicate-group .is-active {
+  background-color: var(--color-gray-700);
+}
+
+.product-card-container {
+  width: 700px;
+  height: 634px;
+}
+
+.product-card-container .product-card {
+  float: left;
+  width: 160px;
+  height: 300px;
+  margin: 9px 0 7px 16px;
+}
+
+.product-card-container .product-card .product-info-area {
+  width: 152px;
+  height: 73px;
+  margin: 12px 4px 0 4px;
+}
+
+.product-card-container .product-card .product-info-area .product-name {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.8px;
+  color: var(--color-back);
+  text-shadow: rgba(0, 0, 0, 0.2);
+}
+
+.product-card-container .product-card .product-info-area .product-price-area {
+  margin-top: 12px;
+  display: flex;
+  align-items: center;
+}
+
+.product-card-container .product-card .product-info-area .product-price-area .product-price {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.product-price strong {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--color-back);
+}
+
+.product-card .product-info-area .rocket-badge-area {
+  width: 54px;
+  height: 14px;
+  margin-left: 6px;
+}
+
+.product-card .product-info-area .rocket-badge-area img {
+  width: 100%;
+  height: 100%;
+}
+
+.product-card .product-info-area .immediately-sale {
+  display: block;
+  color: var(--color-red-500);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.8px;
+}
